# fox-python-test

./: README.md  pyproject.toml
src/task1/: __init__.py
src/task1_most_common_word/: __init__.py
src/task2_merge_intervals/: __init__.py
src/task3_Logger/: README.md  __init__.py
src/task3_Logger/App/: main.py
src/task4/: __init__.py
src/task5/: __init__.py
tests/: test_merge_intervals.py  test_task1.py  test_task1_most_common_word.py  test_task2.py  test_task2_merge_intervals.py  test_task3.py  test_task3_Logger.py  test_task4.py  test_task5.py  test_task5_group_anagrams.py
