[project]
name = "fox-python-test"
version = "0.1.0"
description = "A sample Python project with five tasks, tests, and coverage"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-watch"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing"
